--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.14.1",
     "dotenv": "^16.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -34,7 +35,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
-    "@types/node": "18.16.12",
+    "@types/node": "^18.16.16",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "prisma": "^4.14.1",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
