--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.15.0",
+    "@types/express-session": "^1.17.7",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
