--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@prisma/client": "^4.15.0",
     "@types/express-session": "^1.17.7",
     "axios": "^1.4.0",
