--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -50,6 +51,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.11",
