--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/platform-ws": "^10.2.4",
     "@nestjs/schedule": "^2.2.3",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^9.4.3",
